Bug #27466 nf during nr can leave cluster in inconsistent state
Submitted: 27 Mar 2007 12:17 Modified: 2 Apr 2007 13:40
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1,5.0,5.1 OS:
Assigned to: Jonas Oreland Target Version:

[27 Mar 2007 12:17] Jonas Oreland
Description:
Note, this problem is a bit theoretical, but
  it makes some of our automated tests fail

How to repeat:
2 node cluster (1,2)
ndb_mgm> 2 restart -a -n
ndb_mgm> 1 error 7183
ndb_mgm> 2 error 7127
ndb_mgm> 2 start
[27 Mar 2007 12:43] Jonas Oreland
Update,
while fixing this, I found a much more serious problem
a race condition that could cause some blocks to think node is alive
  while other blocks think it's dead...

This can cause cluster crash on subsequent node starts.
Race condition is that INCL_NODEREQ/CONF series in DBDIH does
not check if node is still alive before sending to next block
[27 Mar 2007 14:18] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/22999

ChangeSet@1.2131, 2007-03-27 14:17:43+02:00, jonas@perch.ndb.mysql.com +8 -0
  ndb - bug#27466 nf during nr can leave cluster in inconsistent state
    Fix race condition between NODE_FAILREP and local INCL_NODEREQ loop
    Also retry on ZNODE_START_DISALLOWED_ERROR
[27 Mar 2007 14:28] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/23000

ChangeSet@1.2448, 2007-03-27 14:27:43+02:00, jonas@perch.ndb.mysql.com +8 -0
    ndb - bug#27466 nf during nr can leave cluster in inconsistent state (recommit in 5.1)
      Fix race condition between NODE_FAILREP and local INCL_NODEREQ loop
      Also retry on ZNODE_START_DISALLOWED_ERROR
[30 Mar 2007 11:32] Tomas Ulin
5.1.18
[2 Apr 2007 13:40] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.18 and 5.1.15-ndb-6.1.6 changelogs.